--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -51,7 +51,9 @@
 			// opacity: 0.3
 			// left: -108px
 		.header-button
-			
+
+
+
 
 	.s-contacts 
 		height: 1300px
@@ -90,6 +92,11 @@
 							grid-template-columns: 0.25fr 0.8fr 1fr 0.5fr 0.7fr 0.8fr 0.9fr 0.9fr 1.9fr 2.1fr 20px
 							grid-template-rows: 33px
 
+	.s-video
+		#video_buttons
+			top: 83%
+		.video_button
+			left: -50.5%
 
 	.logo-center
 		// margin-top: -90px
@@ -149,6 +156,10 @@
 			// opacity: 0.3
 			// left: -108px
 		.header-button
+
+	.s-video
+		.video_button
+			left: -50.7%
 
 	.s-contacts 
 		.left-bg-image
@@ -273,6 +284,10 @@
 			background-position: left
 			// opacity: 0.3
 			left: -150px
+
+	.s-video
+		#video_buttons
+			top: 81%
 
 	.s-contacts
 		height: 1200px
@@ -473,6 +488,8 @@
 	.s-video
 		height: 36.5vw
 		min-height: 36.5vw
+		.video_button
+			left: -51%
 
 	.s-contacts
 		height: 1125px
@@ -569,7 +586,12 @@
 	.s-video
 		height: 37vw
 		min-height: 37vw
-
+		#video_buttons
+			top: 82%
+		.video_button
+			font-size: 17px
+			margin-left: 0px
+			left: -50.5%
 	.s-contacts 
 		height: 1065px
 		min-height: 1065px
@@ -1040,6 +1062,9 @@
 			font-size: 3.91vw
 			width: 5.75vw
 			padding-left: 0.69vw
+		.video_button
+			left: -49.9%
+
 
 	.anchor
 		font-size: 25px
@@ -1145,6 +1170,10 @@
 	.s-video
 		height: 39vw
 		min-height: 39vw
+		#video_buttons
+			top: 80%
+		.video_button
+			font-size: 15px
 
 	.s-photo
 		.owl-carousel
@@ -1408,6 +1437,10 @@
 					margin-left: calc(-360px + 50%)
 				.owl-next
 					margin-left: calc(-350px + 50%)
+
+	.s-video
+		.video_button
+			left: -49.4%
 	
 
 	.s-photo
@@ -1465,6 +1498,11 @@
 	.s-video
 		height: 50vw
 		min-height: 50vw
+		#video_buttons
+			top: 82%
+		.video_button
+			padding: 1px 10px
+			font-size: 13px
 
 	.s-contacts
 		height: 950px
